--- a/t2/CMakeLists.txt
+++ b/t2/CMakeLists.txt
@@ -14,10 +14,10 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
 add_executable(hello ${SRC_LIST})
 
 # install
-IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
-  SET(CMAKE_INSTALL_PREFIX "./install"
+if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
+  set(CMAKE_INSTALL_PREFIX "./install"
       CACHE PATH "hello install prefix" FORCE)
-ENDIF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
+endif(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
 message(STATUS "INSTALL PREFIX " ${CMAKE_INSTALL_PREFIX})
 install(TARGETS hello
         RUNTIME DESTINATION bin
